# LightingProject

./: CMakeLists.txt  Camera.cpp  Mesh.cpp  Model.cpp  README.md  Shader.cpp  main.cpp
include/: Camera.h  Mesh.h  Model.h  shader.h
shaders/: Blinn.fs  Blinn.vs  Gauroud.fs  Gauroud.vs  Phong.fs  Phong.vs  simple.fs  simple.vs
